--- a/README
+++ b/README
@@ -1,2 +1,38 @@
-this game is vr only and in beta so its kinda booty
-by sully and a friend so dont ask to be in dev team
+
+░██╗░░░░░░░██╗░█████╗░██████╗░███╗░░██╗██╗███╗░░██╗░██████╗░██╗
+░██║░░██╗░░██║██╔══██╗██╔══██╗████╗░██║██║████╗░██║██╔════╝░╚═╝
+░╚██╗████╗██╔╝███████║██████╔╝██╔██╗██║██║██╔██╗██║██║░░██╗░░░░
+░░████╔═████║░██╔══██║██╔══██╗██║╚████║██║██║╚████║██║░░╚██╗░░░
+░░╚██╔╝░╚██╔╝░██║░░██║██║░░██║██║░╚███║██║██║░╚███║╚██████╔╝██╗
+░░░╚═╝░░░╚═╝░░╚═╝░░╚═╝╚═╝░░╚═╝╚═╝░░╚══╝╚═╝╚═╝░░╚══╝░╚═════╝░╚═╝
+
+██╗███╗░░██╗  ██████╗░███████╗████████╗░█████╗░
+██║████╗░██║  ██╔══██╗██╔════╝╚══██╔══╝██╔══██╗
+██║██╔██╗██║  ██████╦╝█████╗░░░░░██║░░░███████║
+██║██║╚████║  ██╔══██╗██╔══╝░░░░░██║░░░██╔══██║
+██║██║░╚███║  ██████╦╝███████╗░░░██║░░░██║░░██║
+╚═╝╚═╝░░╚══╝  ╚═════╝░╚══════╝░░░╚═╝░░░╚═╝░░╚═╝
+This game is in beta and is pretty glitchy
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+██╗░░░██╗██████╗░  ░█████╗░███╗░░██╗██╗░░░░░██╗░░░██╗
+██║░░░██║██╔══██╗  ██╔══██╗████╗░██║██║░░░░░╚██╗░██╔╝
+╚██╗░██╔╝██████╔╝  ██║░░██║██╔██╗██║██║░░░░░░╚████╔╝░
+░╚████╔╝░██╔══██╗  ██║░░██║██║╚████║██║░░░░░░░╚██╔╝░░
+░░╚██╔╝░░██║░░██║  ╚█████╔╝██║░╚███║███████╗░░░██║░░░
+░░░╚═╝░░░╚═╝░░╚═╝  ░╚════╝░╚═╝░░╚══╝╚══════╝░░░╚═╝░░░
+You can play on PC but you need a VR in order to play
+
